Fix: the list caused overflow

--- a/public/scss/components/_footer.scss
+++ b/public/scss/components/_footer.scss
@@ -54,11 +54,14 @@ footer {
 		justify-content: flex-start;
 
 		ul {
-			display: flex;
 			margin-bottom: 1em;
+			display: flex;
+			justify-content: center;
+			flex-wrap: wrap;
+			gap: 1em;
 
 			li {
-				margin: 0 1em 0 auto;
+				text-align: center;
 			}
 		}
 		
